--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -234,10 +234,17 @@
         <h3 class="mt-3 text-uppercase text-white">About</h3>
         <div class="my-3 font-weight-light text-justify">
           <p>
-            Ahmed Rangel, also known as 'Bayza'; was born and raised in La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i> in June 1998. He uses FL Studio for his music production.
+            Ahmed Rangel, also known as "Bayza", is a Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. Born in June 1998 (21 years old) and uses <a href="https://www.image-line.com/flstudio/" target="_blank" title="Image-Line: FL Studio">FL Studio</a> for his music production, he started making music in 2012 but didn't released any track until 2014.
           </p>
           <p>
-            During his career, he has been adopting genres such as Electro House, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes.
+            During his career he has been adopting genres such as Big Room, Trap, Dubstep, Melbourne Bounce, PsyTrance, Deep House; adding some Oriental vibes in the most of his tracks.
+          </p>
+          <p>
+            He started in 2014 releasing "Big Room House" music during many years. It was until 2017 when he inclined his music style to "<a href="https://open.spotify.com/playlist/3wTRqy12kxA6SGVU8GDCO5?si=qJ5RBj2bTjS6yYC7DP3qiA" target="_blank" title="Melbourne Bounce Spotify Playlist">Melbourne Bounce</a>". Then, in 2018 he signed with the label "Nelation Music" known today as "<a href="https://www.youtube.com/user/TheBounceUnited" target="_blank" title="Bounce United YouTube Channel">United Music</a>" releasing successful Melbourne Bounce tracks like
+            "<a href="https://bayzamusic.com/releases/2018/convergence" target="_blank" title="Bayza - Convergence">Convergence</a>", 
+            "<a href="https://bayzamusic.com/releases/2018/aether" target="_blank" title="Bayza - Aether">Aether</a>",
+            "<a href="https://bayzamusic.com/releases/2019/majestic" target="_blank" title="Bayza - Majestic">Majestic</a>", 
+            and many others. In 2019 he inclined his music style again to "Deep House”, he started firstly making remixes/bootlegs of famous Pop songs, then in September he self-released his first album called "Genuine" having some successful tracks like "Romance", "Genuine", "Love"; then, he signed with the label "PalmTherapySounds" and released "Astral" and also signed with the label "DeepShine Records" and released "Blossom", both in December. In 2020 he continued to focus in producing Deep House music mainly.
           </p>
         </div>
       </div>
