--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -235,17 +235,30 @@
         <div class="my-3 font-weight-light text-justify">
           <p>
             Ahmed Rangel, also known as "Bayza", is a Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. 
-            Born in June 1998 (21 years old) and uses <a href="https://www.image-line.com/flstudio/" target="_blank" title="Image-Line: FL Studio"><b>FL Studio</b></a> for his music production, he started making music in 2012 but didn't released any track until 2014.
+            Born in June 1998 (21 years old) and uses <a href="https://www.image-line.com/flstudio/" target="_blank" title="Image-Line: FL Studio"><b>"FL Studio"</b></a> for his music production, he started making music in 2012 but didn't released any track until 2014.
           </p>
           <p>
             During his career he has been adopting genres such as Big Room, Trap, Dubstep, Melbourne Bounce, PsyTrance, Deep House; adding some Oriental vibes in the most of his tracks.
           </p>
           <p>
-            He started in 2014 releasing "Big Room House" music during many years. It was until 2017 when he inclined his music style to "<a href="https://open.spotify.com/playlist/3wTRqy12kxA6SGVU8GDCO5?si=qJ5RBj2bTjS6yYC7DP3qiA" target="_blank" title="Melbourne Bounce Spotify Playlist">Melbourne Bounce</a>". Then, in 2018 he signed with the label "Nelation Music" known today as "<a href="https://www.youtube.com/user/TheBounceUnited" target="_blank" title="Bounce United YouTube Channel">United Music</a>" releasing successful Melbourne Bounce tracks like
-            "<a href="https://bayzamusic.com/releases/2018/convergence" target="_blank" title="Bayza - Convergence"><b>Convergence</b></a>", 
-            "<a href="https://bayzamusic.com/releases/2018/aether" target="_blank" title="Bayza - Aether"><b>Aether</b></a>",
-            "<a href="https://bayzamusic.com/releases/2019/majestic" target="_blank" title="Bayza - Majestic"><b>Majestic</b></a>", 
-            and many others. In 2019 he inclined his music style again to "Deep House”, he started firstly making remixes/bootlegs of famous Pop songs, then in September he self-released his first album called "Genuine" having some successful tracks like "Romance", "Genuine", "Love"; then, he signed with the label "PalmTherapySounds" and released "Astral" and also signed with the label "DeepShine Records" and released "Blossom", both in December. In 2020 he continued to focus in producing Deep House music mainly.
+            He started in 2014 releasing some "Big Room House" music during many years. It was until 2017 when he inclined his music style to 
+            <a href="https://open.spotify.com/playlist/3wTRqy12kxA6SGVU8GDCO5?si=qJ5RBj2bTjS6yYC7DP3qiA" target="_blank" title="Melbourne Bounce Spotify Playlist">"Melbourne Bounce"</a>. Then, in 2018 he signed with the label "Nelation Music" known today as 
+            <a href="https://www.youtube.com/user/TheBounceUnited" target="_blank" title="Bounce United YouTube Channel"><b>"United Music"</b></a> releasing successful Melbourne Bounce tracks like
+            <a href="https://bayzamusic.com/releases/2018/convergence" target="_blank" title="Bayza - Convergence"><b>"Convergence"</b></a>, 
+            <a href="https://bayzamusic.com/releases/2018/aether" target="_blank" title="Bayza - Aether"><b>"Aether"</b></a>,
+            <a href="https://bayzamusic.com/releases/2019/majestic" target="_blank" title="Bayza - Majestic"><b>"Majestic"</b></a>, 
+            and many others. In 2019 he inclined his music style again to 
+            <a href="https://open.spotify.com/playlist/6ledEUxKplFir0Iq679geG?si=ZGpwmcDAQPmYL7RC3WUUnQ" target="_blank" title="Deep House Spotify Playlist"><b>"Deep House"</b></a>, 
+            he started firstly making remixes/bootlegs of famous Pop songs, then in September he self-released his first album called 
+            <a href="https://open.spotify.com/album/6aKAlx72omE5lT4tbCAY2t?si=FhJqjpTtT_6pTkLo2bbLgQ" target="_blank" title="Genuine Album"><b>"Genuine"</b></a> having some successful tracks like 
+            <a href="https://bayzamusic.com/releases/2019/romance" target="_blank" title="Bayza - Romance"><b>"Romance"</b></a>, 
+            <a href="https://bayzamusic.com/releases/2019/genuine" target="_blank" title="Bayza - Genuine"><b>"Genuine"</b></a>, 
+            <a href="https://bayzamusic.com/releases/2019/love" target="_blank" title="Bayza - Love"><b>"Love"</b></a>; 
+            then, he signed with the label 
+            <a href="https://www.youtube.com/channel/UCJzLU9cVzVSkpkATGJu2nOg" target="_blank" title="PalmTherapySounds YouTube Channel"><b>"PalmTherapySound"</b></a> and released 
+            <a href="https://bayzamusic.com/releases/2019/astral" target="_blank" title="Bayza - Astral"><b>"Astral"</b></a>; and also signed with the label 
+            <a href="https://www.youtube.com/channel/UC8KCGnqoW1SXM00dwEHCPIw" target="_blank" title="Miss DeepShine YouTube Channel"><b>"DeepShine Records"</b></a> and released 
+            <a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom"><b>"Astral"</b></a>; both in December. In 2020 he continued to focus in producing Deep House music mainly.
           </p>
         </div>
       </div>
