--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -234,7 +234,8 @@
         <h3 class="mt-3 text-uppercase text-white">About</h3>
         <div class="my-3 font-weight-light text-justify">
           <p>
-            Ahmed Rangel, also known as "Bayza", is a Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. 
+            Ahmed Rangel, also known as 
+            <a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=J2gUIe3FQJuz5hsK2olHoQ" target="_blank" title="Bayza Spotify"><b>"Bayza"</b></a>, is a Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. 
             Born in June 1998 (21 years old) and uses <a href="https://www.image-line.com/flstudio/" target="_blank" title="Image-Line: FL Studio"><b>"FL Studio"</b></a> for his music production, he started making music in 2012 but didn't released any track until 2014.
           </p>
           <p>
@@ -242,7 +243,7 @@
           </p>
           <p>
             He started in 2014 releasing some "Big Room House" music during many years. It was until 2017 when he inclined his music style to 
-            <a href="https://open.spotify.com/playlist/3wTRqy12kxA6SGVU8GDCO5?si=qJ5RBj2bTjS6yYC7DP3qiA" target="_blank" title="Melbourne Bounce Spotify Playlist">"Melbourne Bounce"</a>. Then, in 2018 he signed with the label "Nelation Music" known today as 
+            <a href="https://open.spotify.com/playlist/3wTRqy12kxA6SGVU8GDCO5?si=qJ5RBj2bTjS6yYC7DP3qiA" target="_blank" title="Melbourne Bounce Spotify Playlist"><b>"Melbourne Bounce"</b></a>. Then, in 2018 he signed with the label "Nelation Music" known today as 
             <a href="https://www.youtube.com/user/TheBounceUnited" target="_blank" title="Bounce United YouTube Channel"><b>"United Music"</b></a> releasing successful Melbourne Bounce tracks like
             <a href="https://bayzamusic.com/releases/2018/convergence" target="_blank" title="Bayza - Convergence"><b>"Convergence"</b></a>, 
             <a href="https://bayzamusic.com/releases/2018/aether" target="_blank" title="Bayza - Aether"><b>"Aether"</b></a>,
