--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -256,7 +256,7 @@
             <a href="https://www.youtube.com/channel/UCJzLU9cVzVSkpkATGJu2nOg" target="_blank" title="PalmTherapySounds YouTube Channel"><b>"PalmTherapySound"</b></a> and released 
             <a href="https://bayzamusic.com/releases/2019/astral" target="_blank" title="Bayza - Astral"><b>"Astral"</b></a>; and also signed with the label 
             <a href="https://www.youtube.com/channel/UC8KCGnqoW1SXM00dwEHCPIw" target="_blank" title="Miss DeepShine YouTube Channel"><b>"DeepShine Records"</b></a> and released 
-            <a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom"><b>"Astral"</b></a>; both in December. In 2020 he continued to focus in producing Deep House music mainly.
+            <a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom"><b>"Blossom"</b></a>; both in December. In 2020 he continued to focus in producing Deep House music mainly.
           </p>
           <p>
             During his career he has been adopting genres such as Big Room, Trap, Dubstep, Melbourne Bounce, PsyTrance, Deep House; adding some Oriental vibes in the most of his tracks.
