--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -240,13 +240,13 @@
             <b><a href="https://www.image-line.com/flstudio/" target="_blank" title="Image-Line: FL Studio">FL Studio</a></b> for his music production, he started making music in 2012 but didn't released any track until 2014.
           </p>
           <p>
-            He started in 2014 releasing some Big Room House music during many years. It was until 2017 when he inclined his music style to 
+            He started in 2014 releasing some Big Room House music during many years. It was until 2017 when he changed his music style to 
             <b><a href="https://open.spotify.com/playlist/3wTRqy12kxA6SGVU8GDCO5?si=qJ5RBj2bTjS6yYC7DP3qiA" target="_blank" title="Melbourne Bounce Spotify Playlist">Melbourne Bounce</a></b>. Then, in 2018 he signed with the label Nelation Music known today as 
             <b><a href="https://www.youtube.com/user/TheBounceUnited" target="_blank" title="Bounce United YouTube Channel">United Music</a></b> releasing successful Melbourne Bounce tracks like
             <b><a href="https://bayzamusic.com/releases/2018/convergence" target="_blank" title="Bayza - Convergence">Convergence</a></b>, 
             <b><a href="https://bayzamusic.com/releases/2018/aether" target="_blank" title="Bayza - Aether">Aether</a></b>,
             <b><a href="https://bayzamusic.com/releases/2019/majestic" target="_blank" title="Bayza - Majestic">Majestic</a></b>, 
-            and many others. In 2019 he inclined his music style again to 
+            and many others. In 2019 he changed his music style again to 
             <b><a href="https://open.spotify.com/playlist/6ledEUxKplFir0Iq679geG?si=ZGpwmcDAQPmYL7RC3WUUnQ" target="_blank" title="Deep House Spotify Playlist">Deep House</a></b>, 
             he started firstly making remixes/bootlegs of famous Pop songs, then in September he self-released his first album called 
             <b><a href="https://open.spotify.com/album/6aKAlx72omE5lT4tbCAY2t?si=FhJqjpTtT_6pTkLo2bbLgQ" target="_blank" title="Genuine Album">Genuine</a></b> having some successful tracks like 
@@ -257,10 +257,10 @@
             <b><a href="https://www.youtube.com/channel/UCJzLU9cVzVSkpkATGJu2nOg" target="_blank" title="PalmTherapySounds YouTube Channel">PalmTherapySound</a></b> and released 
             <b><a href="https://bayzamusic.com/releases/2019/astral" target="_blank" title="Bayza - Astral">Astral</a></b>; and also signed with the label 
             <b><a href="https://www.youtube.com/channel/UC8KCGnqoW1SXM00dwEHCPIw" target="_blank" title="Miss DeepShine YouTube Channel">DeepShine Records</a></b> and released 
-            <b><a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom">Blossom</a></b>; both in December. In 2020 he continued to focus in producing Deep House music mainly.
+            <b><a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom">Blossom</a></b>; both in December. In 2020 he continued to focus on producing Deep House music mainly.
           </p>
           <p>
-            During his career he has been adopting genres such as Big Room, Trap, Dubstep, Melbourne Bounce, PsyTrance, Deep House; adding some Oriental vibes in the most of his tracks.
+            During his career he has been adopting genres such as Big Room, Trap, Dubstep, Melbourne Bounce, PsyTrance, Deep House; and adding some Oriental vibes in the most of his tracks.
           </p>
         </div>
       </div>
