--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -254,7 +254,7 @@
             <b><a href="https://bayzamusic.com/releases/2019/genuine" target="_blank" title="Bayza - Genuine">Genuine</a></b>, 
             <b><a href="https://bayzamusic.com/releases/2019/love" target="_blank" title="Bayza - Love">Love</a></b>; 
             then, he signed with the label 
-            <b><a href="https://www.youtube.com/channel/UCJzLU9cVzVSkpkATGJu2nOg" target="_blank" title="PalmTherapySounds YouTube Channel">PalmTherapySound</a></b> and released 
+            <b><a href="https://www.youtube.com/channel/UCJzLU9cVzVSkpkATGJu2nOg" target="_blank" title="PalmTherapySounds YouTube Channel">PalmTherapySounds</a></b> and released 
             <b><a href="https://bayzamusic.com/releases/2019/astral" target="_blank" title="Bayza - Astral">Astral</a></b>; and also signed with the label 
             <b><a href="https://www.youtube.com/channel/UC8KCGnqoW1SXM00dwEHCPIw" target="_blank" title="Miss DeepShine YouTube Channel">DeepShine Records</a></b> and released 
             <b><a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom">Blossom</a></b>; both in December. In 2020 he continued to focus on producing Deep House music mainly.
