--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,7 +5,7 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
 <script>
-  $('body').css('padding-top', $('.navbar').outerHeight() + 'px')
+  $('body').css('padding-top', 0 + 'px')
   if ($('.smart-scroll').length > 0) { // check if element exists
       var last_scroll_top = 0;
       $(window).on('scroll', function() {
