--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -50,7 +50,7 @@
         <div class="container text-secondary text-center py-3 px-3">
           <h3 class="mt-5 text-uppercase text-white">{{ release.title }}</h3>
           <h4 class="font-weight-light mb-0">{{ release.artists }}</h4>
-          <div id="reproductor" class="mr-5 ml-5">
+          <div id="reproductor" class="mr-5 ml-5 px-5">
           	<div class="text-center py-3">
             	<div class="video-container">
             	  <iframe width="600" height="338" src="https://www.youtube.com/embed/{{ release.video }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
