--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -57,6 +57,20 @@
             	</div>
           	</div>
           </div>
+          <div id="row">
+            <div class="col-12 col-md-8 info text-justify">
+              <h4 class="text-white">Description</h3>
+                <h6>{{ release.description }}</h6>
+            </div>
+            <div class="col-12 col-md-4 meta">
+              <div class="tags">
+                <h5><span class="meta-heading mb-0">Genre</span></h5>
+                <h6>{{ release.genre }}</h6>
+                <h5><span class="meta-heading mb-0">Release date</span></h5>
+                <h6>{{ release.date | date_to_string }}</h6>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       {% include footer.html %}
