--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -57,12 +57,12 @@
             	</div>
           	</div>
           </div>
-          <div id="row">
+          <div class="row">
             <div class="col-12 col-md-8 info text-justify">
               <h4 class="text-white">Description</h3>
                 <h6>{{ release.description }}</h6>
             </div>
-            <div class="col-12 col-md-4 meta">
+            <div class="col-12 col-md-4 meta text-justify">
               <div class="tags">
                 <h5><span class="meta-heading mb-0">Genre</span></h5>
                 <h6>{{ release.genre }}</h6>
