--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -7,6 +7,13 @@
   {%- assign cover = release.release -%}
 {%- endif -%}
 {%- assign sorted = site.data.releases | sort: 'date' | reverse -%}
+{% assign day = page.date | date: "%-d"  %}
+{% case day %}
+  {% when '1' or '21' or '31' %}{{ day }}st
+  {% when '2' or '22' %}{{ day }}nd
+  {% when '3' or '23' %}{{ day }}rd
+  {% else %}{{ day }}th
+{% endcase %}
 <html lang="en">
   <head>
     <title>{{ release.artists }} - {{ release.title }} | Bayza</title>
@@ -67,7 +74,7 @@
                 <h5><span class="meta-heading mb-0">Genre</span></h5>
                 <h6>{{ release.genre }}</h6>
                 <h5><span class="meta-heading mb-0">Release date</span></h5>
-                <h6>{{ release.date | date_to_string }}</h6>
+                <h6>{{ release.date | date: "of %B, %Y" }}</h6>
               </div>
             </div>
           </div>
