--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -71,9 +71,9 @@
             </div>
             <div class="col-12 col-md-4 meta text-justify">
               <div class="tags">
-                <h5><span class="meta-heading mb-0">Genre</span></h5>
+                <h5><span class="meta-heading mb-0 text-white">Genre</span></h5>
                 <h6>{{ release.genre }}</h6>
-                <h5><span class="meta-heading mb-0">Release date</span></h5>
+                <h5><span class="meta-heading mb-0 text-white">Release date</span></h5>
                 <h6>{{ release.date | date: "of %B, %Y" }}</h6>
               </div>
             </div>
