--- a/css/bayza.css
+++ b/css/bayza.css
@@ -263,3 +263,7 @@ b a:hover {
         padding:0px!important;
     }
 }
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    font-weight: 300!important;
+}
