--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -57,7 +57,7 @@
             	</div>
           	</div>
           </div>
-          <div class="row">
+          <div id="track-info" class="row">
             <div class="col-12 col-md-8 info text-justify">
               <h4 class="text-white">Description</h3>
                 <h6>{{ release.description }}</h6>
