--- a/css/bayza.css
+++ b/css/bayza.css
@@ -119,7 +119,7 @@ section p {
     font-weight: lighter;
 }
 
-small{
+small {
     font-size: .65em;
 }
 
@@ -256,6 +256,10 @@ b a:hover {
     transform:translateY(0); transition: all 0.3s ease-in-out;
 }
 
+.track-info{
+    margin-left: 85px;
+    margin-right: 85px;
+}
 @media only screen and (max-width: 767px){
     #reproductor, #track-info{
         margin:0px!important;
@@ -266,4 +270,3 @@ b a:hover {
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     font-weight: 300!important;
 }
-
