--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -69,6 +69,7 @@
                 {% if release.label %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Label</span></h5>
                 <h6 class="mb-2">{{ release.label }}</h6>
+                {% endif %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Release date</span></h5>
                 <h6 class="mb-2">{{ release.date | date_to_string: "ordinal", "US" }}</h6>
               </div>
