--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -66,12 +66,18 @@
               <div class="tags">
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Genre</span></h5>
                 <h6 class="mb-2">{{ release.genre }}</h6>
+                {% if release.album %}
+                <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Album</span></h5>
+                <h6 class="mb-2">{{ release.album }}</h6>
+                {% endif %}
                 {% if release.label %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Label</span></h5>
                 <h6 class="mb-2">{{ release.label }}</h6>
                 {% endif %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Release date</span></h5>
                 <h6 class="mb-2">{{ release.date | date_to_string: "ordinal", "US" }}</h6>
+                <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Duration</span></h5>
+                <h6 class="mb-2">{{ release.duration }}</h6>
               </div>
             </div>
           </div>
