--- a/css/bayza.css
+++ b/css/bayza.css
@@ -271,3 +271,7 @@ b a:hover {
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     font-weight: 300!important;
 }
+
+.tag :hover {
+    color: #fff;
+}
