--- a/css/bayza.css
+++ b/css/bayza.css
@@ -8,7 +8,7 @@
 }
 
 .icon-bayza {
-    color: #a2a2a2;
+    color: #b8b8b8;
     font-size: 1.3rem;
 }
 
@@ -68,7 +68,7 @@ h1 {
 }
 
 .text-secondary {
-    color: #b8b8b8!important;
+    color: #a2a2a2!important;
 }
 
 .bg-darkest {
