--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -80,7 +80,7 @@
                 <h6 class="mb-2"><span class="tag">{{ release.duration }}</span></h6>
                 {% if release.fanlink %}
                 <h5 class="mb-0"><span class="meta-heading mb-0 text-white">Stream/Download:</span></h5>
-                <h6 class="mb-2"><span class="tag"><a target="_blank" href="https://{{ release.fanlink }}">{{ release.fanlink }}</a></span></h6>
+                <h6 class="mb-2"><span><a class="tag" target="_blank" href="https://{{ release.fanlink }}">{{ release.fanlink }}</a></span></h6>
                 {% endif %}
               </div>
             </div>
