--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -235,18 +235,21 @@
         <div class="my-3 font-weight-light text-justify">
           <p>
             Ahmed Rangel, also known as 
-            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=J2gUIe3FQJuz5hsK2olHoQ" target="_blank" title="Bayza Spotify">Bayza</a></b>, is a Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. 
+            <b><a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=J2gUIe3FQJuz5hsK2olHoQ" target="_blank" title="Bayza Spotify">Bayza</a></b>, is currently a Deep House Music Producer from La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i>. 
             Born in June 1998 (21 years old) and uses 
             <b><a href="https://www.image-line.com/flstudio/" target="_blank" title="Image-Line: FL Studio">FL Studio</a></b> for his music production, he started making music in 2012 but didn't released any track until 2014.
           </p>
           <p>
-            He started in 2014 releasing some Big Room House music during many years. It was until 2017 when he changed his music style to 
+            He started in 2014 releasing some Big Room House music during many years. It was until 2017 when he transitioned his style to 
             <b><a href="https://open.spotify.com/playlist/3wTRqy12kxA6SGVU8GDCO5?si=qJ5RBj2bTjS6yYC7DP3qiA" target="_blank" title="Melbourne Bounce Spotify Playlist">Melbourne Bounce</a></b>. Then, in 2018 he signed with the label Nelation Music known today as 
             <b><a href="https://www.youtube.com/user/TheBounceUnited" target="_blank" title="Bounce United YouTube Channel">United Music</a></b> releasing successful Melbourne Bounce tracks like
             <b><a href="https://bayzamusic.com/releases/2018/convergence" target="_blank" title="Bayza - Convergence">Convergence</a></b>, 
             <b><a href="https://bayzamusic.com/releases/2018/aether" target="_blank" title="Bayza - Aether">Aether</a></b>,
             <b><a href="https://bayzamusic.com/releases/2019/majestic" target="_blank" title="Bayza - Majestic">Majestic</a></b>, 
-            and many others. In 2019 he changed his music style again to 
+            and many others.
+          </p>  
+            
+          <p>In 2019 he transitioned one more time his style to 
             <b><a href="https://open.spotify.com/playlist/6ledEUxKplFir0Iq679geG?si=ZGpwmcDAQPmYL7RC3WUUnQ" target="_blank" title="Deep House Spotify Playlist">Deep House</a></b>, 
             he started firstly making remixes/bootlegs of famous Pop songs, then in September he self-released his first album called 
             <b><a href="https://open.spotify.com/album/6aKAlx72omE5lT4tbCAY2t?si=FhJqjpTtT_6pTkLo2bbLgQ" target="_blank" title="Genuine Album">Genuine</a></b> having some successful tracks like 
@@ -254,13 +257,16 @@
             <b><a href="https://bayzamusic.com/releases/2019/genuine" target="_blank" title="Bayza - Genuine">Genuine</a></b>, 
             <b><a href="https://bayzamusic.com/releases/2019/love" target="_blank" title="Bayza - Love">Love</a></b>; 
             then, he signed with the label 
-            <b><a href="https://www.youtube.com/channel/UCJzLU9cVzVSkpkATGJu2nOg" target="_blank" title="PalmTherapySounds YouTube Channel">PalmTherapySounds</a></b> and released 
-            <b><a href="https://bayzamusic.com/releases/2019/astral" target="_blank" title="Bayza - Astral">Astral</a></b>; and also signed with the label 
+            <b><a href="https://www.youtube.com/channel/UCJzLU9cVzVSkpkATGJu2nOg" target="_blank" title="PalmTherapySounds YouTube Channel">PalmTherapySounds</a></b>, and also signed with the label 
             <b><a href="https://www.youtube.com/channel/UC8KCGnqoW1SXM00dwEHCPIw" target="_blank" title="Miss DeepShine YouTube Channel">DeepShine Records</a></b> and released 
-            <b><a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom">Blossom</a></b>; both in December. In 2020 he continued to focus on producing Deep House music mainly.
+            <b><a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom">Blossom</a></b>; both in December.
           </p>
+
           <p>
-            During his career he has been adopting genres such as Big Room, Trap, Dubstep, Melbourne Bounce, PsyTrance, Deep House; and adding some Oriental vibes in the most of his tracks.
+            In 2020 he continued to focus on producing Deep House music mainly. He signed with the label
+            <b><a href="https://www.youtube.com/channel/UCqslpVmjQHieXjqr3oOfteg" target="_blank" title="One Seven Music YouTube Channel">One Seven Music</a></b> (a part of Sony Music Entertainment) in conjunction with
+            <b><a href="https://www.youtube.com/channel/UCoo_WkQMj2h-WFi7nBQjtyw" target="_blank" title="FRQNCY YouTube Channel">FRQNCY</a></b> releasing
+            <b><a href="https://bayzamusic.com/releases/2020/everythingiwanted" target="_blank" title="Bayza - Everything I Wanted">Everything I Wanted</a></b>, a cover of Billie Eilish's hit. 
           </p>
         </div>
       </div>
