--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -258,8 +258,7 @@
             <b><a href="https://bayzamusic.com/releases/2019/love" target="_blank" title="Bayza - Love">Love</a></b>; 
             then, he signed with the label 
             <b><a href="https://www.youtube.com/channel/UCJzLU9cVzVSkpkATGJu2nOg" target="_blank" title="PalmTherapySounds YouTube Channel">PalmTherapySounds</a></b>, and also signed with the label 
-            <b><a href="https://www.youtube.com/channel/UC8KCGnqoW1SXM00dwEHCPIw" target="_blank" title="Miss DeepShine YouTube Channel">DeepShine Records</a></b> and released 
-            <b><a href="https://bayzamusic.com/releases/2019/blossom" target="_blank" title="Bayza - Blossom">Blossom</a></b>; both in December.
+            <b><a href="https://www.youtube.com/channel/UC8KCGnqoW1SXM00dwEHCPIw" target="_blank" title="Miss DeepShine YouTube Channel">DeepShine Records</a></b>, both in December.
           </p>
 
           <p>
