--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -140,7 +140,7 @@
 
     <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5">
-        <h3 class="mt-3 text-uppercase text-white">Latest Releases</h3>
+        <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
         <div class="row my-4">{% for item in sorted %}
           <div class="col-6 col-lg-3">
             <div class="item">
