--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,4 +1,4 @@
-{%- assign sorted = site.data.releases | sort: 'date' | reverse -%}
+{%- assign sorted = site.data.releases | sort: 'date' | reverse | where: "type", Releases -%}
 <html lang="en">
   <head>
     <title>Bayza</title>
@@ -141,7 +141,8 @@
     <section id="latest releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
-        <div class="row my-4">{% for item in sorted %}
+        <div class="row my-4">
+          {% for item in sorted %}
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
