--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -142,6 +142,15 @@
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
         <div class="row my-4">
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/2020/alone.jpg">
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Alone</p></small></h5>
+                  <small><p class="mb-4">DJ SK & Bayza</p></small>
+              </div>
+            </div>
+          </div>
           {% for item in sorted %}
           <div class="col-6 col-lg-3">
             <div class="item">
