--- a/css/bayza.css
+++ b/css/bayza.css
@@ -278,3 +278,20 @@ b a:hover {
 .tag:hover {
     color: #fff;
 }
+
+.upcoming {
+    filter: contrast(100%) brightness(30%)
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+.upcoming-container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
