--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -145,7 +145,28 @@
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
-                  <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/2020/alone.jpg">
+                <div class="upcoming-container" >
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/miracle.jpg">
+                  <div class="centered">
+                    <h2>Upcoming</h2>
+                    <small><h5>July 10</h5></small>
+                  </div>
+                </div>
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">Miracle</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-lg-3">
+            <div class="item">
+              <div class="cover">
+                <div class="upcoming-container" >
+                  <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/alone.jpg">
+                  <div class="centered">
+                    <h2>Upcoming</h2>
+                    <small><h5>June 24</h5></small>
+                  </div>
+                </div>
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">Alone</p></small></h5>
                   <small><p class="mb-4">DJ SK & Bayza</p></small>
               </div>
@@ -162,7 +183,7 @@
                 </a>
               </div>
             </div>
-          </div>{% if forloop.index0 == 7 %}{% break %}{% endif %}{% endfor %}
+          </div>{% if forloop.index0 == 5 %}{% break %}{% endif %}{% endfor %}
         </div>  
         <a class="btn btn-outline-releases px-4 py-1" href="/releases">See more</a>
       </div>
