--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -149,7 +149,7 @@
                   <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/miracle.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>July 10</h5></small>
+                    <small><h5>Jul 10, 2020</h5></small>
                   </div>
                 </div>
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">Miracle</p></small></h5>
@@ -164,7 +164,7 @@
                   <img class="img-fluid scale-on-hover upcoming" src="https://bayzamusic.com/images/releases/2020/alone.jpg">
                   <div class="centered">
                     <h4>Upcoming</h4>
-                    <small><h5>June 24</h5></small>
+                    <small><h5>Jun 24, 2020</h5></small>
                   </div>
                 </div>
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">Alone</p></small></h5>
