--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -139,7 +139,7 @@
     </section>
 
     <section id="latest releases" class="bg-darkest">
-      <div class="container text-secondary text-center py-5">
+      <div class="container text-secondary text-left py-5">
         <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
         <div class="row my-4">
           <div class="col-6 col-lg-3">
@@ -179,8 +179,9 @@
                 <a href="/releases/{{ item.year }}{{ item.link }}/{{ item.release }}">
                   <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
                   <h5 class="mb-0"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
-                  <small><p class="mb-4">{{ item.artists }}</p></small>
                 </a>
+                <small><p class="mb-0">{{ item.artists }}</p></small>
+                <small><p class="mb-4">{{ item.date | date: "%b %-d, %Y" }}</p></small>
               </div>
             </div>
           </div>{% if forloop.index0 == 9 %}{% break %}{% endif %}{% endfor %}
