--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -39,7 +39,7 @@
   </body>
   {% include navbar.html %}
     <section id="releases" class="bg-darkest-est">
-      <div class="container text-secondary text-center py-5">
+      <div class="container text-secondary text-left py-5">
         <h3 class="mt-5 text-uppercase text-white">{{ page.extra }} {{ page.type }}</h3>
         <h4 class="font-weight-light">{{ page.year }}</h4>
         <div class="row my-4">{% for item in sorted %}
@@ -48,9 +48,10 @@
               <div class="cover">
                 <a href="/releases/{{ item.year }}{{ page.link }}/{{ item.release }}">
                   <img class="img-fluid scale-on-hover" src="https://bayzamusic.com/images/releases/{{ item.year }}/{{ item.cover }}.jpg" alt="{{ item.artists }} - {{ item.title }}">
-                  <h5 class="mb-0"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>
-                  <small><p class="mb-4">{{ item.artists }}</p></small> 
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">{{ item.title }}</p></small></h5>    
                 </a>
+                <small><p class="mb-0">{{ item.artists }}</p></small> 
+                <small><p class="mb-4">{{ item.date | date: "%b %-d, %Y" }}</p></small>
               </div>
             </div>
           </div>{% endfor %}
