--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -39,10 +39,10 @@
   </body>
   {% include navbar.html %}
     <section id="releases" class="bg-darkest-est">
-      <div class="container text-secondary text-left py-5">
+      <div class="container text-secondary text-center py-5">
         <h3 class="mt-5 text-uppercase text-white">{{ page.extra }} {{ page.type }}</h3>
         <h4 class="font-weight-light">{{ page.year }}</h4>
-        <div class="row my-4">{% for item in sorted %}
+        <div class="row my-4 text-left">{% for item in sorted %}
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
