--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -139,9 +139,9 @@
     </section>
 
     <section id="latest releases" class="bg-darkest">
-      <div class="container text-secondary text-left py-5">
+      <div class="container text-secondary py-5 text-center">
         <h3 class="mt-3 text-uppercase text-white">Latest Music</h3>
-        <div class="row my-4">
+        <div class="row my-4 text-left">
           <div class="col-6 col-lg-3">
             <div class="item">
               <div class="cover">
