--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -26,6 +26,8 @@
     <meta property="og:site_name" content="Bayza"/>
     <meta property="og:image" content="http://bayzamusic.com/images/releases/{{ release.year }}/{{ release.cover }}.jpg"/>
     <meta property="og:image:alt" content="{{ release.title }} cover image"/>
+    <meta property="og:image:width" content="500"/>
+    <meta property="og:image:height" content="500"/>
     <meta property="og:description" content="{{ release.description }}"/>
 
     <!-- Twitter Card -->
