--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,6 +18,8 @@
     <meta property="og:image" content="http://bayzamusic.com/images/logomt.jpg"/>
     <meta property="og:image_secure" content="https://bayzamusic.com/images/logomt.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
+    <meta property="og:image:width" content="300"/>
+    <meta property="og:image:height" content="300"/>
     <meta property="og:description" content="Bayza is a Panamanian musician and producer."/>
     
     <!-- Twitter Card -->
