--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -20,6 +20,7 @@
     <meta name="description" content="{{ release.artists }} - {{ release.title }}."/>
 
     <!-- Protocolo Open Graph -->
+    <meta property="og:url" content="http://bayzamusic.com/releases/{{ release.year }}{{ page.link }}/{{ release.release }}"/>
     <meta property="og:secure_url" content="http://bayzamusic.com/releases/{{ release.year }}{{ page.link }}/{{ release.release }}"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="{{ release.artists }} - {{ release.title }}"/>
