--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,6 +11,7 @@
     <meta name="description" content="Bayza is a Panamanian musician and producer."/>
     
     <!-- Protocolo Open Graph -->
+    <meta property="og:url" content="http://bayzamusic.com"/>
     <meta property="og:secure_url" content="http://bayzamusic.com"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza"/>
