--- a/_layouts/releases-year.html
+++ b/_layouts/releases-year.html
@@ -11,12 +11,15 @@
     <meta name="description" content="{{ page.year }} {{ page.type }}."/>
     
     <!-- Protocolo Open Graph -->
+    <meta property="og:url" content="http://bayzamusic.com/releases/{{ page.year }}{{ page.link }}"/>
     <meta property="og:secure_url" content="http://bayzamusic.com/releases/{{ page.year }}{{ page.link }}"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza {{ page.year }} {{ page.type }}"/>
     <meta property="og:site_name" content="Bayza"/>
     <meta property="og:image" content="http://bayzamusic.com/images/{{ page.year }}{{ page.link }}bayzacom.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
+    <meta property="og:image:width" content="300"/>
+    <meta property="og:image:height" content="300"/>
     <meta property="og:description" content="{{ page.year }} {{ page.type }}"/>
     
     <!-- Twitter Card -->
