--- a/_layouts/fanlink.html
+++ b/_layouts/fanlink.html
@@ -16,6 +16,8 @@
     <meta property="og:image" content="{{ page.image }}"/>
     <meta property="og:image:secure_url" content="{{ page.image_secure }}"/>
     <meta property="og:image:alt" content="{{ page.title }}"/>
+    <meta property="og:image:width" content="300"/>
+    <meta property="og:image:height" content="300"/>
     <meta property="og:description" content="{{ page.artists }}"/>
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
