--- a/_layouts/releases.html
+++ b/_layouts/releases.html
@@ -10,12 +10,15 @@
     <meta name="description" content="All releases."/>
     
     <!-- Protocolo Open Graph -->
+    <meta property="url" content="http://bayzamusic.com/releases"/>
     <meta property="og:secure_url" content="http://bayzamusic.com/releases"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza Music Releases"/>
     <meta property="og:site_name" content="Bayza"/>
     <meta property="og:image" content="http://bayzamusic.com/images/logomt.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
+    <meta property="og:image:width" content="300"/>
+    <meta property="og:image:height" content="300"/>
     <meta property="og:description" content="All releases"/>
     
     <!-- Twitter Card -->
