--- a/_layouts/releases-post.html
+++ b/_layouts/releases-post.html
@@ -45,7 +45,7 @@
     <link rel="stylesheet" href="/css/fontello-embedded.css">
     <link rel="stylesheet" href="/css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/releases/{{ release.year }}/{{ release.release }}"/>
+    <link rel="canonical" href="https://bayzamusic.com/releases/{{ release.year }}{{ page.link }}/{{ release.release }}"/>
     <script type="application/ld+json">
       {   
         "@context" : "http://schema.org",
