--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -17,7 +17,7 @@
     <meta property="og:title" content="Bayza"/>
     <meta property="og:site_name" content="Bayza"/>
     <meta property="og:image" content="http://bayzamusic.com/images/logomt-600x400.jpg"/>
-    <meta property="og:image_secure" content="https://bayzamusic.com/images/logomt-600x400.jpg"/>
+    <meta property="og:image_secure" content="http://bayzamusic.com/images/logomt-600x400.jpg"/>
     <meta property="og:image:alt" content="Bayza cover image"/>
     <meta property="og:image:width" content="300"/>
     <meta property="og:image:height" content="200"/>
